deployment/api/api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskpilot-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskpilot-api
  template:
    metadata:
      labels:
        app: taskpilot-api
    spec:
      containers:
        - name: taskpilot-api
          image: bogdanivan12/taskpilot-api:latest
          command: ["python3"]
          args: ["api/api_main.py"]
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "2Gi"
              cpu: "1"
            limits:
              memory: "4Gi"
              cpu: "2"
          imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: taskpilot-api
  namespace: default
spec:
  type: NodePort
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
      nodePort: 30080
  selector:
    app: taskpilot-api

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: taskpilot-api-traffic
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: taskpilot-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskpilot-api
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taskpilot-api
                port:
                  number: 8080
  tls:
    - hosts:
        - localhost
